﻿============================== 2019-02-11 ==============================

  new data (thanks to Kei Sugiyama, University of Tokyo, Japan, for providing data in YAML format!)
    main/Ge/Burnett.yml
  bug fix (thanks to Michael Roselli, LightPath Technologies, Inc., Orlando, FL, USA!)
    glass/lightpath/BD6.yml - wrong n,k data set replaced by the correct one
  new data (thanks to SeokJae Yoo, Korea University, Seoul, Korea, for providing numerical data in YAML format!)
    main/MoS2/Jung.yml
    main/WS2/Jung.yml
    main/WSe2/Jung.yml
  new data (thanks to Henning Galinski, ETH Zurich, Switzerland, for providing numerical data in YAML format!)
    main/TiN/Schnabel.yml
  new data (thanks to Emanuel Wittmann, Ludwig-Maximilians-Universität München, Germany!)
    glass/schott/obsolete/LF7.yml
  new data (thanks to Braden Czapla, Columbia University, New York, USA, for providing numerical data in YAML format!)
    organic/(C2H6OSi)n - polydimethylsiloxane/Schneider-RTV615.yml
    organic/(C2H6OSi)n - polydimethylsiloxane/Schneider-Sylgard184.yml
  new data (thanks to Arina Rezaeva, Moscow State University, Russia!)
    main/H2O/Warren-2008.yml
  updated data (thanks to Omer Luria!)
    main/MoS2/Yim*.yml: fix film thickness unit and rename files respectively, info, specs
  new data
    main/C/Arakawa.yml
    other/human body/DNA/Inagaki.yml
  updated data
    main/H2O/Warren.yml renamed to 'Warren-1998.yml'
  bug fixes
    library.yml: fix range of main/Fe/Ordal.yml data (thanks to Martin Borchert, FHI Berlin, Germany!)
    main/PbMoO4/Malitson-o.yml: fixed dispersion formula (denominator of the second term 0.033764 -> 0.33764) (Thanks to Darius H. Torchinsky, Temple University, Philadelphia, PA, USA!)

============================== 2018-07-01 ==============================

  !!! format modification !!! 
    'range' key in dispersion formulas replaced by 'wavelength_range'