@@ -1,0 +1,500 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "A. Belosludtsev, K. Juškevičius, L. Ceizaris, R. Samuilovas, S. Stanionytė, V. Jasulaitienė, S. Kičas. Correlation between stoichiometry and properties of scandium oxide films prepared by reactive magnetron sputtering, <a href=\"https://doi.org/10.1016/j.apsusc.2017.08.068\"><i>Appl. Surf. Sci.</i> <b>427</b>, 312-318 (2018)</a> (Numerical data kindly provided by Alexandr Belosludtsev)"
+COMMENTS: "Stoichiometric 270±5 nm film on SiO<sub>2</sub> substrate."
+DATA:
+  - type: tabulated nk
+    data: |
+        0.230 2.35000 5.66E-03
+        0.232 2.35000 5.48E-03
+        0.234 2.34271 5.31E-03
+        0.236 2.33303 5.14E-03
+        0.238 2.32371 4.98E-03
+        0.240 2.31472 4.83E-03
+        0.242 2.30605 4.68E-03
+        0.244 2.29768 4.53E-03
+        0.246 2.28961 4.39E-03
+        0.248 2.28182 4.25E-03
+        0.250 2.27430 4.12E-03
+        0.252 2.26703 3.99E-03
+        0.254 2.26001 3.87E-03
+        0.256 2.25322 3.75E-03
+        0.258 2.24666 3.63E-03
+        0.260 2.24031 3.52E-03
+        0.262 2.23416 3.41E-03
+        0.264 2.22822 3.30E-03
+        0.266 2.22246 3.20E-03
+        0.268 2.21689 3.10E-03
+        0.270 2.21149 3.00E-03
+        0.272 2.20626 2.91E-03
+        0.274 2.20118 2.82E-03
+        0.276 2.19627 2.73E-03
+        0.278 2.19150 2.64E-03
+        0.280 2.18687 2.56E-03
+        0.282 2.18238 2.48E-03
+        0.284 2.17803 2.40E-03
+        0.286 2.17380 2.33E-03
+        0.288 2.16969 2.26E-03
+        0.290 2.16570 2.19E-03
+        0.292 2.16183 2.12E-03
+        0.294 2.15806 2.05E-03
+        0.296 2.15440 1.99E-03
+        0.298 2.15084 1.93E-03
+        0.300 2.14738 1.87E-03
+        0.302 2.14401 1.81E-03
+        0.304 2.14074 1.75E-03
+        0.306 2.13755 1.70E-03
+        0.308 2.13445 1.64E-03
+        0.310 2.13143 1.59E-03
+        0.312 2.12848 1.54E-03
+        0.314 2.12562 1.49E-03
+        0.316 2.12283 1.45E-03
+        0.318 2.12011 1.40E-03
+        0.320 2.11746 1.36E-03
+        0.322 2.11488 1.32E-03
+        0.324 2.11236 1.28E-03
+        0.326 2.10990 1.24E-03
+        0.328 2.10751 1.20E-03
+        0.330 2.10517 1.16E-03
+        0.332 2.10289 1.12E-03
+        0.334 2.10066 1.09E-03
+        0.336 2.09849 1.05E-03
+        0.338 2.09637 1.02E-03
+        0.340 2.09430 9.90E-04
+        0.342 2.09228 9.59E-04
+        0.344 2.09030 9.29E-04
+        0.346 2.08838 9.00E-04
+        0.348 2.08649 8.72E-04
+        0.350 2.08465 8.45E-04
+        0.352 2.08285 8.19E-04
+        0.354 2.08109 7.93E-04
+        0.356 2.07937 7.68E-04
+        0.358 2.07768 7.44E-04
+        0.360 2.07604 7.21E-04
+        0.362 2.07443 6.99E-04
+        0.364 2.07285 6.77E-04
+        0.366 2.07131 6.56E-04
+        0.368 2.06980 6.35E-04
+        0.370 2.06833 6.16E-04
+        0.372 2.06688 5.96E-04
+        0.374 2.06547 5.78E-04
+        0.376 2.06408 5.60E-04
+        0.378 2.06273 5.42E-04
+        0.380 2.06140 5.25E-04
+        0.382 2.06010 5.09E-04
+        0.384 2.05882 4.93E-04
+        0.386 2.05757 4.78E-04
+        0.388 2.05635 4.63E-04
+        0.390 2.05515 4.48E-04
+        0.392 2.05397 4.34E-04
+        0.394 2.05282 4.21E-04
+        0.396 2.05169 4.08E-04
+        0.398 2.05058 3.95E-04
+        0.400 2.04949 3.83E-04
+        0.402 2.04842 3.71E-04
+        0.404 2.04738 3.59E-04
+        0.406 2.04635 3.48E-04
+        0.408 2.04534 3.37E-04
+        0.410 2.04435 3.27E-04
+        0.412 2.04338 3.16E-04
+        0.414 2.04243 3.07E-04
+        0.416 2.04149 2.97E-04
+        0.418 2.04058 2.88E-04
+        0.420 2.03968 2.79E-04
+        0.422 2.03879 2.70E-04
+        0.424 2.03792 2.62E-04
+        0.426 2.03707 2.53E-04
+        0.428 2.03623 2.46E-04
+        0.430 2.03541 2.38E-04
+        0.432 2.03460 2.30E-04
+        0.434 2.03380 2.23E-04
+        0.436 2.03302 2.16E-04
+        0.438 2.03225 2.10E-04
+        0.440 2.03150 2.03E-04
+        0.442 2.03076 1.97E-04
+        0.444 2.03003 1.91E-04
+        0.446 2.02931 1.85E-04
+        0.448 2.02860 1.79E-04
+        0.450 2.02791 1.73E-04
+        0.452 2.02723 1.68E-04
+        0.454 2.02656 1.63E-04
+        0.456 2.02590 1.58E-04
+        0.458 2.02525 1.53E-04
+        0.460 2.02461 1.48E-04
+        0.462 2.02398 1.43E-04
+        0.464 2.02336 1.39E-04
+        0.466 2.02275 1.35E-04
+        0.468 2.02216 1.30E-04
+        0.470 2.02157 1.26E-04
+        0.472 2.02099 1.22E-04
+        0.474 2.02041 1.18E-04
+        0.476 2.01985 1.15E-04
+        0.478 2.01930 1.11E-04
+        0.480 2.01875 1.08E-04
+        0.482 2.01822 1.04E-04
+        0.484 2.01769 1.01E-04
+        0.486 2.01717 9.80E-05
+        0.488 2.01666 9.49E-05
+        0.490 2.01615 9.20E-05
+        0.492 2.01565 8.91E-05
+        0.494 2.01516 8.63E-05
+        0.496 2.01468 8.36E-05
+        0.498 2.01420 8.10E-05
+        0.500 2.01374 7.85E-05
+        0.502 2.01327 7.60E-05
+        0.504 2.01282 7.37E-05
+        0.506 2.01237 7.14E-05
+        0.508 2.01193 6.91E-05
+        0.510 2.01149 6.70E-05
+        0.512 2.01106 6.49E-05
+        0.514 2.01064 6.29E-05
+        0.516 2.01022 6.09E-05
+        0.518 2.00981 5.90E-05
+        0.520 2.00940 5.72E-05
+        0.522 2.00900 5.54E-05
+        0.524 2.00860 5.37E-05
+        0.526 2.00821 5.20E-05
+        0.528 2.00783 5.04E-05
+        0.530 2.00745 4.88E-05
+        0.532 2.00708 4.73E-05
+        0.534 2.00671 4.58E-05
+        0.536 2.00634 4.44E-05
+        0.538 2.00598 4.30E-05
+        0.540 2.00563 4.16E-05
+        0.542 2.00528 4.04E-05
+        0.544 2.00493 3.91E-05
+        0.546 2.00459 3.79E-05
+        0.548 2.00426 3.67E-05
+        0.550 2.00393 3.55E-05
+        0.552 2.00360 3.44E-05
+        0.554 2.00327 3.34E-05
+        0.556 2.00296 3.23E-05
+        0.558 2.00264 3.13E-05
+        0.560 2.00233 3.03E-05
+        0.562 2.00202 2.94E-05
+        0.564 2.00172 2.85E-05
+        0.566 2.00142 2.76E-05
+        0.568 2.00112 2.67E-05
+        0.570 2.00083 2.59E-05
+        0.572 2.00054 2.51E-05
+        0.574 2.00026 2.43E-05
+        0.576 1.99998 2.35E-05
+        0.578 1.99970 2.28E-05
+        0.580 1.99942 2.21E-05
+        0.582 1.99915 2.14E-05
+        0.584 1.99888 2.07E-05
+        0.586 1.99862 2.01E-05
+        0.588 1.99836 1.95E-05
+        0.590 1.99810 1.89E-05
+        0.592 1.99784 1.83E-05
+        0.594 1.99759 1.77E-05
+        0.596 1.99734 1.72E-05
+        0.598 1.99709 1.66E-05
+        0.600 1.99685 1.61E-05
+        0.602 1.99661 1.56E-05
+        0.604 1.99637 1.51E-05
+        0.606 1.99614 1.46E-05
+        0.608 1.99590 1.42E-05
+        0.610 1.99567 1.37E-05
+        0.612 1.99544 1.33E-05
+        0.614 1.99522 1.29E-05
+        0.616 1.99500 1.25E-05
+        0.618 1.99478 1.21E-05
+        0.620 1.99456 1.17E-05
+        0.622 1.99435 1.14E-05
+        0.624 1.99413 1.10E-05
+        0.626 1.99392 1.07E-05
+        0.628 1.99371 1.03E-05
+        0.630 1.99351 1.00E-05
+        0.632 1.99331 9.70E-06
+        0.634 1.99310 9.39E-06
+        0.636 1.99291 9.10E-06
+        0.638 1.99271 8.82E-06
+        0.640 1.99252 8.54E-06
+        0.642 1.99232 8.28E-06
+        0.644 1.99213 8.02E-06
+        0.646 1.99194 7.77E-06
+        0.648 1.99176 7.53E-06
+        0.650 1.99157 7.29E-06
+        0.652 1.99139 7.06E-06
+        0.654 1.99121 6.84E-06
+        0.656 1.99103 6.63E-06
+        0.658 1.99085 6.42E-06
+        0.660 1.99068 6.22E-06
+        0.662 1.99051 6.03E-06
+        0.664 1.99034 5.84E-06
+        0.666 1.99017 5.66E-06
+        0.668 1.99000 5.48E-06
+        0.670 1.98983 5.31E-06
+        0.672 1.98967 5.15E-06
+        0.674 1.98950 4.99E-06
+        0.676 1.98934 4.83E-06
+        0.678 1.98918 4.68E-06
+        0.680 1.98903 4.53E-06
+        0.682 1.98887 4.39E-06
+        0.684 1.98871 4.25E-06
+        0.686 1.98856 4.12E-06
+        0.688 1.98841 3.99E-06
+        0.690 1.98826 3.87E-06
+        0.692 1.98811 3.75E-06
+        0.694 1.98796 3.63E-06
+        0.696 1.98782 3.52E-06
+        0.698 1.98767 3.41E-06
+        0.700 1.98753 3.30E-06
+        0.702 1.98739 3.20E-06
+        0.704 1.98725 3.10E-06
+        0.706 1.98711 3.00E-06
+        0.708 1.98697 2.91E-06
+        0.710 1.98683 2.82E-06
+        0.712 1.98670 2.73E-06
+        0.714 1.98657 2.65E-06
+        0.716 1.98643 2.56E-06
+        0.718 1.98630 2.48E-06
+        0.720 1.98617 2.41E-06
+        0.722 1.98604 2.33E-06
+        0.724 1.98592 2.26E-06
+        0.726 1.98579 2.19E-06
+        0.728 1.98566 2.12E-06
+        0.730 1.98554 2.05E-06
+        0.732 1.98542 1.99E-06
+        0.734 1.98530 1.93E-06
+        0.736 1.98517 1.87E-06
+        0.738 1.98506 1.81E-06
+        0.740 1.98494 1.75E-06
+        0.742 1.98482 1.70E-06
+        0.744 1.98470 1.64E-06
+        0.746 1.98459 1.59E-06
+        0.748 1.98447 1.54E-06
+        0.750 1.98436 1.50E-06
+        0.752 1.98425 1.45E-06
+        0.754 1.98414 1.40E-06
+        0.756 1.98403 1.36E-06
+        0.758 1.98392 1.32E-06
+        0.760 1.98381 1.28E-06
+        0.762 1.98370 1.24E-06
+        0.764 1.98360 1.20E-06
+        0.766 1.98349 1.16E-06
+        0.768 1.98339 1.12E-06
+        0.770 1.98328 1.09E-06
+        0.772 1.98318 1.06E-06
+        0.774 1.98308 1.02E-06
+        0.776 1.98297 9.91E-07
+        0.778 1.98287 9.60E-07
+        0.780 1.98278 9.30E-07
+        0.782 1.98268 9.01E-07
+        0.784 1.98258 8.73E-07
+        0.786 1.98248 8.45E-07
+        0.788 1.98239 8.19E-07
+        0.790 1.98229 7.94E-07
+        0.792 1.98220 7.69E-07
+        0.794 1.98210 7.45E-07
+        0.796 1.98201 7.22E-07
+        0.798 1.98192 6.99E-07
+        0.800 1.98183 6.77E-07
+        0.802 1.98174 6.56E-07
+        0.804 1.98165 6.36E-07
+        0.806 1.98156 6.16E-07
+        0.808 1.98147 5.97E-07
+        0.810 1.98138 5.78E-07
+        0.812 1.98130 5.60E-07
+        0.814 1.98121 5.43E-07
+        0.816 1.98112 5.26E-07
+        0.818 1.98104 5.09E-07
+        0.820 1.98096 4.93E-07
+        0.822 1.98087 4.78E-07
+        0.824 1.98079 4.63E-07
+        0.826 1.98071 4.49E-07
+        0.828 1.98063 4.35E-07
+        0.830 1.98055 4.21E-07
+        0.832 1.98046 4.08E-07
+        0.834 1.98039 3.95E-07
+        0.836 1.98031 3.83E-07
+        0.838 1.98023 3.71E-07
+        0.840 1.98015 3.59E-07
+        0.842 1.98007 3.48E-07
+        0.844 1.98000 3.37E-07
+        0.846 1.97992 3.27E-07
+        0.848 1.97985 3.17E-07
+        0.850 1.97977 3.07E-07
+        0.852 1.97970 2.97E-07
+        0.854 1.97962 2.88E-07
+        0.856 1.97955 2.79E-07
+        0.858 1.97948 2.70E-07
+        0.860 1.97941 2.62E-07
+        0.862 1.97934 2.54E-07
+        0.864 1.97926 2.46E-07
+        0.866 1.97919 2.38E-07
+        0.868 1.97912 2.31E-07
+        0.870 1.97906 2.23E-07
+        0.872 1.97899 2.17E-07
+        0.874 1.97892 2.10E-07
+        0.876 1.97885 2.03E-07
+        0.878 1.97878 1.97E-07
+        0.880 1.97872 1.91E-07
+        0.882 1.97865 1.85E-07
+        0.884 1.97859 1.79E-07
+        0.886 1.97852 1.73E-07
+        0.888 1.97846 1.68E-07
+        0.890 1.97839 1.63E-07
+        0.892 1.97833 1.58E-07
+        0.894 1.97826 1.53E-07
+        0.896 1.97820 1.48E-07
+        0.898 1.97814 1.43E-07
+        0.900 1.97808 1.39E-07
+        0.902 1.97802 1.35E-07
+        0.904 1.97795 1.30E-07
+        0.906 1.97789 1.26E-07
+        0.908 1.97783 1.22E-07
+        0.910 1.97777 1.19E-07
+        0.912 1.97771 1.15E-07
+        0.914 1.97766 1.11E-07
+        0.916 1.97760 1.08E-07
+        0.918 1.97754 1.04E-07
+        0.920 1.97748 1.01E-07
+        0.922 1.97742 9.80E-08
+        0.924 1.97737 9.50E-08
+        0.926 1.97731 9.20E-08
+        0.928 1.97726 8.91E-08
+        0.930 1.97720 8.64E-08
+        0.932 1.97714 8.37E-08
+        0.934 1.97709 8.11E-08
+        0.936 1.97704 7.85E-08
+        0.938 1.97698 7.61E-08
+        0.940 1.97693 7.37E-08
+        0.942 1.97687 7.14E-08
+        0.944 1.97682 6.92E-08
+        0.946 1.97677 6.70E-08
+        0.948 1.97672 6.49E-08
+        0.950 1.97666 6.29E-08
+        0.952 1.97661 6.10E-08
+        0.954 1.97656 5.90E-08
+        0.956 1.97651 5.72E-08
+        0.958 1.97646 5.54E-08
+        0.960 1.97641 5.37E-08
+        0.962 1.97636 5.20E-08
+        0.964 1.97631 5.04E-08
+        0.966 1.97626 4.88E-08
+        0.968 1.97621 4.73E-08
+        0.970 1.97616 4.58E-08
+        0.972 1.97612 4.44E-08
+        0.974 1.97607 4.30E-08
+        0.976 1.97602 4.17E-08
+        0.978 1.97597 4.04E-08
+        0.980 1.97592 3.91E-08
+        0.982 1.97588 3.79E-08
+        0.984 1.97583 3.67E-08
+        0.986 1.97579 3.56E-08
+        0.988 1.97574 3.45E-08
+        0.990 1.97570 3.34E-08
+        0.992 1.97565 3.23E-08
+        0.994 1.97561 3.13E-08
+        0.996 1.97556 3.04E-08
+        0.998 1.97552 2.94E-08
+        1.000 1.97547 2.85E-08
+        1.002 1.97543 2.76E-08
+        1.004 1.97538 2.67E-08
+        1.006 1.97534 2.59E-08
+        1.008 1.97530 2.51E-08
+        1.010 1.97526 2.43E-08
+        1.012 1.97521 2.36E-08
+        1.014 1.97517 2.28E-08
+        1.016 1.97513 2.21E-08
+        1.018 1.97509 2.14E-08
+        1.020 1.97505 2.08E-08
+        1.022 1.97501 2.01E-08
+        1.024 1.97497 1.95E-08
+        1.026 1.97493 1.89E-08
+        1.028 1.97489 1.83E-08
+        1.030 1.97485 1.77E-08
+        1.032 1.97480 1.72E-08
+        1.034 1.97477 1.66E-08
+        1.036 1.97473 1.61E-08
+        1.038 1.97469 1.56E-08
+        1.040 1.97465 1.51E-08
+        1.042 1.97461 1.46E-08
+        1.044 1.97457 1.42E-08
+        1.046 1.97453 1.37E-08
+        1.048 1.97450 1.33E-08
+        1.050 1.97446 1.29E-08
+        1.052 1.97442 1.25E-08
+        1.054 1.97438 1.21E-08
+        1.056 1.97435 1.17E-08
+        1.058 1.97431 1.14E-08
+        1.060 1.97427 1.10E-08
+        1.062 1.97424 1.07E-08
+        1.064 1.97420 1.03E-08
+        1.066 1.97417 1.00E-08
+        1.068 1.97413 9.70E-09
+        1.070 1.97409 9.40E-09
+        1.072 1.97406 9.10E-09
+        1.074 1.97402 8.80E-09
+        1.076 1.97399 8.50E-09
+        1.078 1.97395 8.30E-09
+        1.080 1.97392 8.00E-09
+        1.082 1.97389 7.80E-09
+        1.084 1.97385 7.50E-09
+        1.086 1.97382 7.30E-09
+        1.088 1.97378 7.10E-09
+        1.090 1.97375 6.80E-09
+        1.092 1.97372 6.60E-09
+        1.094 1.97369 6.40E-09
+        1.096 1.97365 6.20E-09
+        1.098 1.97362 6.00E-09
+        1.100 1.97359 5.80E-09
+        1.102 1.97356 5.70E-09
+        1.104 1.97352 5.50E-09
+        1.106 1.97349 5.30E-09
+        1.108 1.97346 5.10E-09
+        1.110 1.97343 5.00E-09
+        1.112 1.97340 4.80E-09
+        1.114 1.97337 4.70E-09
+        1.116 1.97334 4.50E-09
+        1.118 1.97330 4.40E-09
+        1.120 1.97327 4.30E-09
+        1.122 1.97324 4.10E-09
+        1.124 1.97321 4.00E-09
+        1.126 1.97318 3.90E-09
+        1.128 1.97315 3.80E-09
+        1.130 1.97312 3.60E-09
+        1.132 1.97309 3.50E-09
+        1.134 1.97306 3.40E-09
+        1.136 1.97304 3.30E-09
+        1.138 1.97301 3.20E-09
+        1.140 1.97298 3.10E-09
+        1.142 1.97295 3.00E-09
+        1.144 1.97292 2.90E-09
+        1.146 1.97289 2.80E-09
+        1.148 1.97286 2.70E-09
+        1.150 1.97283 2.60E-09
+        1.152 1.97281 2.60E-09
+        1.154 1.97278 2.50E-09
+        1.156 1.97275 2.40E-09
+        1.158 1.97272 2.30E-09
+        1.160 1.97270 2.30E-09
+        1.162 1.97267 2.20E-09
+        1.164 1.97264 2.10E-09
+        1.166 1.97262 2.10E-09
+        1.168 1.97259 2.00E-09
+        1.170 1.97256 1.90E-09
+        1.172 1.97253 1.90E-09
+        1.174 1.97251 1.80E-09
+        1.176 1.97248 1.80E-09
+        1.178 1.97246 1.70E-09
+        1.180 1.97243 1.60E-09
+        1.182 1.97241 1.60E-09
+        1.184 1.97238 1.50E-09
+        1.186 1.97235 1.50E-09
+        1.188 1.97233 1.40E-09
+        1.190 1.97230 1.40E-09
+        1.192 1.97228 1.40E-09
+        1.194 1.97225 1.30E-09
+        1.196 1.97223 1.30E-09
+        1.198 1.97220 1.20E-09
+        1.200 1.97218 1.20E-09
+SPECS:
+    n_absolute: true
+    wavelength_vacuum: true
+    film_thickness: 270 nm
+    substrate: SiO2
