@@ -1810,6 +1810,9 @@
         - PAGE: Medenbach
           name: "Medenbach et al. 2001: n 0.435-0.644 µm"
           data: "main/Sc2O3/Medenbach.yml"
+        - PAGE: Belosludtsev
+          name: "Belosludtsev et al. 2018: n,k 0.270-1.200 µm"
+          data: "main/Sc2O3/Belosludtsev.yml"
         - PAGE: Arndt
           name: "Arndt et al. 1984: n 0.40-0.75 µm"
           data: "main/Sc2O3/Arndt.yml"
